--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,10 @@ body, html {
   display: flex;
   justify-content: center;
   align-content: center;
-  background: #252839;
 }
 .enter-room-container{
   margin: auto;
-  
+
 }
 .enter-room-container form{
   display: flex;
@@ -36,4 +35,118 @@ body, html {
   color: #252839;
   text-transform: uppercase;
   font-weight: bold;
+}
+
+
+h2{
+    font-size: 18px;
+    padding: 10px 20px;
+    color: #575ed8;
+}
+
+#usernameContainer {
+    margin: 0 auto 50px auto;
+}
+
+#hasUsername {
+    margin: 0 auto 50px auto;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#usernameDisplay {
+    font-size: 24px;
+    padding-left: 5px;
+}
+
+#joinRoom {
+
+}
+
+#editUsername {
+    padding-left: 15px;
+    color: blue;
+    cursor: pointer;
+}
+
+#welcome {
+    font-size: 24px;
+}
+
+#needsUsername p {
+    text-align: center;
+}
+
+#usernameInput {
+    border: 1px solid #ccc;
+    margin: 0 0 10px 0;
+}
+
+#room-info {
+}
+
+#mario-chat{
+    max-width: 600px;
+    margin: 30px auto;
+    border: 1px solid #ddd;
+    box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
+    border-radius: 2px;
+}
+
+#chat-window{
+    height: 400px;
+    overflow: auto;
+    background: #f9f9f9;
+}
+
+#output p{
+    padding: 14px 0px;
+    margin: 0 20px;
+    border-bottom: 1px solid #e9e9e9;
+    color: #555;
+}
+
+#feedback p{
+    color: #aaa;
+    padding: 14px 0px;
+    margin: 0 20px;
+}
+
+#output strong{
+    color: #575ed8;
+}
+
+label{
+    box-sizing: border-box;
+    display: block;
+    padding: 10px 20px;
+}
+
+input{
+    padding: 10px 20px;
+    box-sizing: border-box;
+    background: #eee;
+    border: 0;
+    display: block;
+    width: 100%;
+    background: #fff;
+    border-bottom: 1px solid #eee;
+    font-family: Nunito;
+    font-size: 16px;
+}
+
+button{
+    background: #575ed8;
+    color: #fff;
+    font-size: 18px;
+    border: 0;
+    padding: 12px 0;
+    width: 100%;
+    border-radius: 0 0 2px 2px;
+}
+
+.container {
+  width: 50%;
 }
